--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="p-0 m-0 leading-snug">
 <head>
   <meta charset="utf-8">
   <title>Mentorship</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body>
   <app-root></app-root>
